--- a/project/chat_forum_more_project/web/public_static_resource/css/public/mobile/public.css
+++ b/project/chat_forum_more_project/web/public_static_resource/css/public/mobile/public.css
@@ -1,4 +1,4 @@
-#page_dom{
+#dom_father{
     width: 100%;
     height: 100%;
 }
@@ -68,3 +68,6 @@
     width: calc(100% / 9);
 }
 /*平分父*/
+.foot_active{
+    background: var(--public_foot_active_background);
+}
