--- a/project/chat_forum_more_project/web/public_static_resource/css/personalized/color/1.css
+++ b/project/chat_forum_more_project/web/public_static_resource/css/personalized/color/1.css
@@ -5,4 +5,5 @@
     --default_font_color: #ff999c;
     --public_foot_background: red;
     --public_foot_active_background: #ff6b3d;
+    --shade_background_color: green;
 }
