--- a/project/chat_forum_more_project/web/public_static_resource/css/public/mobile/public.css
+++ b/project/chat_forum_more_project/web/public_static_resource/css/public/mobile/public.css
@@ -4,8 +4,9 @@
     position: absolute;
     left: 0px;
     bottom: 0px;
-    opacity:0;
-    filter:alpha(opacity=0); /* 针对 IE8 以及更早的版本 */
+    /*opacity:0;*/
+    /*filter:alpha(opacity=0); !* 针对 IE8 以及更早的版本 *!*/
+    overflow: hidden;
 }
 #public_footer{
     width: 100%;
@@ -75,4 +76,12 @@
 /*平分父*/
 .foot_active{
     background: var(--public_foot_active_background);
+}
+.shades{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background: var(--shade_background_color);
 }
