静态资源，nginx反向代理，集群。优化遮罩层，减少渲染

--- a/project/chat_forum_more_project/web/public_static_resource/css/personalized/color/1.css
+++ b/project/chat_forum_more_project/web/public_static_resource/css/personalized/color/1.css
@@ -5,5 +5,7 @@
     --default_font_color: #ff999c;
     --public_foot_background: red;
     --public_foot_active_background: #ff6b3d;
-    --shade_background_color: green;
+    --shade_index_background_color: green;
+    --shade_platform_background_color: #001080;
+    --shade_page_background_color: #800007;
 }
