--- a/project/chat_forum_more_project/web/public_static_resource/css/public/mobile/public.css
+++ b/project/chat_forum_more_project/web/public_static_resource/css/public/mobile/public.css
@@ -77,11 +77,54 @@
 .foot_active{
     background: var(--public_foot_active_background);
 }
-.shades{
+/*.shades{*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    position: absolute;*/
+/*    top: 0px;*/
+/*    left: 0px;*/
+/*    background: var(--shade_background_color);*/
+/*}*/
+#index_shade, #platform_shade, #page_shade{
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0px;
     left: 0px;
-    background: var(--shade_background_color);
+    /*opacity:1 !important;*/
+    /*filter:alpha(opacity=100)!important; !* 针对 IE8 以及更早的版本 *!*/
 }
+#index_shade{
+    background: var(--shade_index_background_color);
+}
+#platform_shade{
+    background: var(--shade_platform_background_color);
+}
+#page_shade{
+    background: var(--shade_page_background_color);
+}
+.invisible{
+    visibility: hidden !important;
+    z-index: 0 !important;
+}
+.gradually_visible{
+    visibility: visible !important;
+    opacity:0 !important;
+    filter:alpha(opacity=0)!important; /* 针对 IE8 以及更早的版本 */
+}
+/*.opacity_show{*/
+/*    -webkit-transition: all 1s;*/
+/*    -moz-transition: all 1s;*/
+/*    -ms-transition: all 1s;*/
+/*    -o-transition: all 1s;*/
+/*    transition: all 1s;*/
+/*    opacity: 1;*/
+/*}*/
+/*.opacity_hidden{*/
+/*    -webkit-transition: all 1s;*/
+/*    -moz-transition: all 1s;*/
+/*    -ms-transition: all 1s;*/
+/*    -o-transition: all 1s;*/
+/*    transition: all 1s;*/
+/*    opacity: 0;*/
+/*}*/
