优化 子页面 localstorage ，避免读取不到用户自定义语言跟样式

--- a/project/chat_forum_more_project/web/public_static_resource/css/public/mobile/public.css
+++ b/project/chat_forum_more_project/web/public_static_resource/css/public/mobile/public.css
@@ -128,3 +128,8 @@
 /*    transition: all 1s;*/
 /*    opacity: 0;*/
 /*}*/
+.iframe_now_show{
+    visibility: hidden !important;
+    width: 0px;
+    height: 0px;
+}
