--- a/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
+++ b/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
@@ -4,8 +4,6 @@
     position: absolute;
     left: 0px;
     bottom: 0px;
-    /*opacity:0;*/
-    /*filter:alpha(opacity=0); !* 针对 IE8 以及更早的版本 *!*/
     overflow: hidden;
 }
 #public_footer{
@@ -16,16 +14,17 @@
     position: absolute;
     left: 0px;
     bottom: 0px;
-    /*display: flex;*/
 }
 #public_footer li{
     height: 100%;
     float: left;
     text-align: center;
-    /*flex: 1;*/
 }
 #public_footer li>a{
     display: block;
+}
+#public_footer li>a>span{
+    font-weight: bold;
 }
 /*平分父*/
 /*一个子*/
@@ -77,22 +76,12 @@
 .foot_active{
     background: var(--public_foot_active_background);
 }
-/*.shades{*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    position: absolute;*/
-/*    top: 0px;*/
-/*    left: 0px;*/
-/*    background: var(--shade_background_color);*/
-/*}*/
 #index_shade, #platform_shade, #page_shade{
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0px;
     left: 0px;
-    /*opacity:1 !important;*/
-    /*filter:alpha(opacity=100)!important; !* 针对 IE8 以及更早的版本 *!*/
 }
 #index_shade{
     background: var(--shade_index_background_color);
@@ -112,23 +101,7 @@
     opacity:0 !important;
     filter:alpha(opacity=0)!important; /* 针对 IE8 以及更早的版本 */
 }
-/*.opacity_show{*/
-/*    -webkit-transition: all 1s;*/
-/*    -moz-transition: all 1s;*/
-/*    -ms-transition: all 1s;*/
-/*    -o-transition: all 1s;*/
-/*    transition: all 1s;*/
-/*    opacity: 1;*/
-/*}*/
-/*.opacity_hidden{*/
-/*    -webkit-transition: all 1s;*/
-/*    -moz-transition: all 1s;*/
-/*    -ms-transition: all 1s;*/
-/*    -o-transition: all 1s;*/
-/*    transition: all 1s;*/
-/*    opacity: 0;*/
-/*}*/
-.iframe_now_show{
+.iframe_no_show{
     visibility: hidden !important;
     width: 0px;
     height: 0px;
