优化代码，修改nginx配置，localstorage、静态资源跟、api、地址分开，localstorage文件单独列出

--- a/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
+++ b/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
@@ -5,6 +5,8 @@
     left: 0px;
     bottom: 0px;
     overflow: hidden;
+    opacity: 0 !important;
+    filter: alpha(opacity=0)!important; /* 针对 IE8 以及更早的版本 */
 }
 #public_footer{
     width: 100%;
