--- a/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
+++ b/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
@@ -5,6 +5,7 @@
     --default_font_color: #ff999c;
     --public_foot_background: red;
     --public_foot_active_background: #ff6b3d;
+    --base_shade_background_color: #803d47;
     --shade_index_background_color: green;
     --shade_platform_background_color: #001080;
     --shade_page_background_color: #800007;
