--- a/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
+++ b/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
@@ -1,3 +1,6 @@
+body{
+    visibility: hidden;
+}
 #dom_father{
     width: 100%;
     height: 100%;
@@ -103,11 +106,21 @@
 }
 .gradually_visible{
     visibility: visible !important;
-    opacity:0 !important;
+    /*opacity:0 !important;*/
     filter:alpha(opacity=0)!important; /* 针对 IE8 以及更早的版本 */
 }
-.iframe_no_show{
+/*.iframe_no_show{*/
+/*    visibility: hidden !important;*/
+/*    width: 0px;*/
+/*    height: 0px;*/
+/*}*/
+#storage_father{
     visibility: hidden !important;
     width: 0px;
     height: 0px;
+    overflow: hidden;
 }
+/*#shade_father{*/
+/*    width: 0px;*/
+/*    height: 0px;*/
+/*}*/
