--- a/project/chat_forum_more_project/web/static_resource/css/public/reset.css
+++ b/project/chat_forum_more_project/web/static_resource/css/public/reset.css
@@ -28,6 +28,8 @@ html {
 }
 body {
     line-height: 1;
+    width: 100%;
+    height: 100%;
     color: var(--default_html_font_color);
     background: var(--eyeshield_background);
 }
@@ -115,6 +117,6 @@ a:focus,a:hover{
 input,a{
     box-sizing: border-box;
 }
-iframe{
-    visibility: hidden !important;
-}
+/*iframe{*/
+/*    visibility: hidden !important;*/
+/*}*/
