--- a/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
+++ b/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
@@ -8,8 +8,8 @@ body{
     left: 0px;
     bottom: 0px;
     overflow: hidden;
-    opacity: 0 !important;
-    filter: alpha(opacity=0)!important; /* 针对 IE8 以及更早的版本 */
+    /*opacity: 0 !important;*/
+    /*filter: alpha(opacity=0)!important; !* 针对 IE8 以及更早的版本 *!*/
 }
 #public_footer{
     width: 100%;
@@ -107,7 +107,7 @@ body{
 .gradually_visible{
     visibility: visible !important;
     /*opacity:0 !important;*/
-    filter:alpha(opacity=0)!important; /* 针对 IE8 以及更早的版本 */
+    /*filter:alpha(opacity=0)!important; !* 针对 IE8 以及更早的版本 *!*/
 }
 /*.iframe_no_show{*/
 /*    visibility: hidden !important;*/
@@ -124,3 +124,11 @@ body{
 /*    width: 0px;*/
 /*    height: 0px;*/
 /*}*/
+.opacity_show{
+    opacity:100 !important;
+    filter:alpha(opacity=100)!important; /* 针对 IE8 以及更早的版本 */
+}
+.opacity_hidden{
+    opacity:0 !important;
+    filter:alpha(opacity=0)!important; /* 针对 IE8 以及更早的版本 */
+}
