--- a/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
+++ b/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
@@ -1,5 +1,10 @@
-body{
+#body{
     visibility: hidden;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0px;
+    top: 0px;
 }
 #dom_father{
     width: 100%;
@@ -7,9 +12,6 @@ body{
     position: absolute;
     left: 0px;
     bottom: 0px;
-    overflow: hidden;
-    /*opacity: 0 !important;*/
-    /*filter: alpha(opacity=0)!important; !* 针对 IE8 以及更早的版本 *!*/
 }
 #public_footer{
     width: 100%;
@@ -87,6 +89,7 @@ body{
     position: absolute;
     top: 0px;
     left: 0px;
+    z-index: 2100000000 !important;
 }
 #base_shade{
     background: var(--base_shade_background_color);
@@ -102,33 +105,23 @@ body{
 }
 .invisible{
     visibility: hidden !important;
-    z-index: 0 !important;
+    /*display: none;*/
 }
 .gradually_visible{
     visibility: visible !important;
-    /*opacity:0 !important;*/
-    /*filter:alpha(opacity=0)!important; !* 针对 IE8 以及更早的版本 *!*/
+    /*display: block;*/
 }
-/*.iframe_no_show{*/
-/*    visibility: hidden !important;*/
-/*    width: 0px;*/
-/*    height: 0px;*/
-/*}*/
 #storage_father{
     visibility: hidden !important;
     width: 0px;
     height: 0px;
     overflow: hidden;
 }
-/*#shade_father{*/
-/*    width: 0px;*/
-/*    height: 0px;*/
+/*.opacity_show{*/
+/*    opacity:100 !important;*/
+/*    filter:alpha(opacity=100)!important; !* 针对 IE8 以及更早的版本 *!*/
 /*}*/
-.opacity_show{
-    opacity:100 !important;
-    filter:alpha(opacity=100)!important; /* 针对 IE8 以及更早的版本 */
-}
-.opacity_hidden{
-    opacity:0 !important;
-    filter:alpha(opacity=0)!important; /* 针对 IE8 以及更早的版本 */
-}
+/*.opacity_hidden{*/
+/*    opacity:0 !important;*/
+/*    filter:alpha(opacity=0)!important; !* 针对 IE8 以及更早的版本 *!*/
+/*}*/
