--- a/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
+++ b/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
@@ -1,4 +1,4 @@
-:root{
+/*32dc9d70cb0c0fd2*/:root{
     --eyeshield_background: #e7e6cb;
     --default_html_font_color: #e7572e;
     --legend_font_color: #e7851d;
@@ -8,5 +8,5 @@
     --base_shade_background_color: #803d47;
     --shade_index_background_color: green;
     --shade_platform_background_color: #001080;
-    --shade_page_background_color: #800007;
-}
+    --shade_page_background_color: #800007;/*32dc9d70cb0c0fd2*/
+    /*87faa8c3511d07fd*/}/*87faa8c3511d07fd*/
