--- a/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
+++ b/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
@@ -1,5 +1,4 @@
-/*version_begin_1*/
-:root{
+/*4eae316969853819*/:root{
     --public_foot_height:3rem;
 }
 #body{
@@ -41,8 +40,8 @@
 }
 #public_footer li>a>span{
     font-weight: bold;
-}
-/*      平
+}/*4eae316969853819*/
+/*9943eccfd64871a0*//*      平
 分
 父
 */
@@ -74,8 +73,8 @@
 }
 .foot_active{
     background: var(--public_foot_active_background);
-}
-.shades{
+}/*9943eccfd64871a0*/
+/*32dc9d70cb0c0fd2*/.shades{
     width: 100%;
     height: 100%;
     position: absolute;
@@ -107,5 +106,4 @@
     width: 0px;
     height: 0px;
     overflow: hidden;
-}
-/*version_end_1*/
+}/*32dc9d70cb0c0fd2*/
