--- a/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
+++ b/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
@@ -1,5 +1,7 @@
 /*4eae316969853819*/:root{
     --public_foot_height:3rem;
+    --base_shade_center_min_hieght:3rem;
+    --base_shade_center_line_height:1.2rem;
 }
 #body{
     width: 100%;
@@ -85,15 +87,51 @@
 #base_shade{
     background: var(--base_shade_background_color);
 }
-#index_shade{
-    background: var(--shade_index_background_color);
+.base_shade_center{
+    padding: 0.5rem;
+    width: calc(100% - 1rem);
+    max-height: 100%;
+    /*min-height: var(--base_shade_center_min_hieght);*/
+    overflow-y: scroll;
+    background: var(--base_shade_center_background_color);
+    text-align: left;
+    line-height: var(--base_shade_center_line_height);
+    word-wrap: break-word;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
-#platform_shade{
-    background: var(--shade_platform_background_color);
+.base_shade_center_son{
+    margin: 0 auto;
+    height: 1.5rem;
+    background: var(--base_shade_center_son_background_color);
 }
-#page_shade{
-    background: var(--shade_page_background_color);
+.base_shade_center_sons{
+    display: block;
+    float: left;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 0.75rem;
+    margin-right: 0.5rem;
+    background: var(--base_shade_center_sons_background_color);
 }
+.base_shade_center_sons:last-child{
+    margin-right: 0px;
+}
+.base_shade_center_son_now{
+    background: var(--base_shade_center_son_now_background_color);
+}
+/*#index_shade{*/
+/*    background: var(--shade_index_background_color);*/
+/*}*/
+/*#platform_shade{*/
+/*    background: var(--shade_platform_background_color);*/
+/*}*/
+/*#page_shade{*/
+/*    background: var(--shade_page_background_color);*/
+/*}*/
 .invisible{
     visibility: hidden !important;
 }
