--- a/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
+++ b/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
@@ -13,4 +13,8 @@
     /*87faa8c3511d07fd*/--base_shade_center_sons_background_color: red;
     --base_shade_center_son_now_background_color: #002cff;
     --base_shade_center_son_background_color: #e548ff;
+    --notice_father_background_color: red;
+    --notice_head_background_color: pink;
+    --notice_foot_background_color: green;
+    --notice_body_background_color: #00f5ff;
 }/*87faa8c3511d07fd*/
