--- a/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
+++ b/project/chat_forum_more_project/web/static_resource/css/public/mobile/public.css
@@ -88,15 +88,7 @@
 .foot_active{
     background: var(--public_foot_active_background);
 }/*9943eccfd64871a0*/
-/*32dc9d70cb0c0fd2*/.shades{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 2100000000 !important;
-}
-#base_shade{
+/*32dc9d70cb0c0fd2*/#base_shade{
     background: var(--base_shade_background_color);
 }
 .base_shade_center{
