--- a/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
+++ b/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
@@ -1,20 +1,20 @@
 /*32dc9d70cb0c0fd2*/:root{
-    --eyeshield_background: #e7e6cb;
-    --default_html_font_color: #e7572e;
-    --legend_font_color: #e7851d;
-    --default_font_color: #ff999c;
-    --public_foot_background: red;
-    --public_foot_active_background: #ff6b3d;
-    --base_shade_background_color: #803d47;
-    --base_shade_center_background_color: #008010;
-    --shade_index_background_color: green;
-    --shade_platform_background_color: #001080;
-    --shade_page_background_color: #800007;/*32dc9d70cb0c0fd2*/
-    /*87faa8c3511d07fd*/--base_shade_center_sons_background_color: red;
-    --base_shade_center_son_now_background_color: #002cff;
-    --base_shade_center_son_background_color: #e548ff;
-    --notice_father_background_color: red;
-    --notice_head_background_color: pink;
-    --notice_foot_background_color: green;
-    --notice_body_background_color: #00f5ff;
+    --eyeshield_bk: #e7e6cb;
+    --d_html_font_c: #e7572e;
+    --legend_font_c: #e7851d;
+    --d_font_c: #ff999c;
+    --pub_f_bk: red;
+    --pub_f_act_bk: #ff6b3d;
+    --b_shade_bk: #803d47;
+    --b_shade_center_bk: #008010;
+    --shade_index_bk: green;
+    --shade_plat_bk: #001080;
+    --shade_page_bk: #800007;/*32dc9d70cb0c0fd2*/
+    /*87faa8c3511d07fd*/--b_shade_center_sons_bk: red;
+    --b_shade_center_son_now_bk: #002cff;
+    --b_shade_center_son_bk: #e548ff;
+    --notice_father_bk: red;
+    --notice_head_bk: pink;
+    --notice_foot_bk: green;
+    --notice_body_bk: #00f5ff;
 }/*87faa8c3511d07fd*/
