--- a/project/chat_forum_more_project/web/static_resource/css/pub/reset.css
+++ b/project/chat_forum_more_project/web/static_resource/css/pub/reset.css
@@ -23,15 +23,15 @@ footer, header, hgroup, menu, nav, section {
     display: block;
 }
 html {
-    color: var(--default_html_font_color);
-    background: var(--eyeshield_background);
+    color: var(--d_html_font_c);
+    background: var(--eyeshield_bk);
 }
 body {
     line-height: 1;
     width: 100%;
     height: 100%;
-    color: var(--default_html_font_color);
-    background: var(--eyeshield_background);
+    color: var(--d_html_font_c);
+    background: var(--eyeshield_bk);
 }/*9ce4beeb62649531*/
 /*d03efd2a792dced1*/ol, ul {
     list-style: none;
@@ -50,7 +50,7 @@ table {
 }
 h1, h2, h3, h4, h5, h6, p,dl, dt, dd, ol, ul, li,a,i,b,span,table,thead,tbody,th,td,input{
     text-decoration:none;
-    color: var(--default_font_color);
+    color: var(--d_font_c);
     font-family: "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei UI","Microsoft YaHei",SimHei,"宋体",simsun,sans-serif;font-weight: normal;
 }
 table {
@@ -108,7 +108,7 @@ input[type=date]::-webkit-outer-spin-button {
 }
 input[type=date]{-moz-appearance:textfield;}
 legend {
-    color: var(--legend_font_color);
+    color: var(--legend_font_c);
 }
 a:focus,a:hover{
     text-decoration: none;
