添加手机端页面css

--- a/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
+++ b/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
@@ -13,7 +13,7 @@
     /*87faa8c3511d07fd*/--b_shade_center_sons_bk: red;
     --b_shade_center_son_now_bk: #002cff;
     --b_shade_center_son_bk: #e548ff;
-    --notice_father_bk: red;
+    --notice_f_bk: red;
     --notice_head_bk: pink;
     --notice_foot_bk: green;
     --notice_body_bk: #00f5ff;
