--- a/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
+++ b/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
@@ -13,6 +13,11 @@
     /*87faa8c3511d07fd*/--b_shade_center_sons_bk: red;
     --b_shade_center_son_now_bk: #002cff;
     --b_shade_center_son_bk: #e548ff;
+    --one_head_bk: #0068ff;
+    --two_head_bk: #ff0f51;
+    --two_h_li_bk: #31fdff;
+    --three_head_bk: #c5ff00;
+    --three_h_li_bk: #ffdd05;
     --notice_f_bk: red;
     --notice_head_bk: pink;
     --notice_foot_bk: green;
