--- a/project/chat_forum_more_project/web/static_resource/css/pub/mobile/pub.css
+++ b/project/chat_forum_more_project/web/static_resource/css/pub/mobile/pub.css
@@ -1,29 +1,10 @@
-/*4eae316969853819*/:root{
-    --pub_foot_h: 3rem;
-    --one_head_h: 3rem;
-    --two_head_h: 2rem;
-    --three_head_h: 2rem;
-    --b_shade_cent_min_h: 3rem;
-    --b_shade_cent_line_h: 1.2rem;
-    --b_shade_cent_sons_h: 1.5rem;
-    --b_shade_cent_sons_border_radius: 0.75rem;
-    --b_shade_cent_sons_margin_right: 0.5rem;
-    --b_shade_cent_padd: 0.5rem;
-    --b_shade_cent_padd_left_right: 1rem;
-    --notice_head_h: 3rem;
-    --notice_head_font_size: 1.2rem;
-    --notice_foot_h: 3rem;
-    --notice_foot_font_size: 1.2rem;
-    --notice_body_padd: 0.5rem;
-    --notice_body_padd_left_right: 1rem;
-    --notice_body_line_h: 1.5rem;
-}
-#body{
+/*tps*/#body{
     width: 100%;
     height: 100%;
     position: absolute;
     left: 0px;
     top: 0px;
+    overflow-y: hidden;
 }
 #dom_f{
     width: 100%;
@@ -31,11 +12,15 @@
     position: absolute;
     left: 0px;
     bottom: 0px;
+    overflow-y: hidden;
 }
-#pub_head{
-    width: 500vw;
-    height: auto;
-}
+/*#pub_head{*/
+/*    width: auto;*/
+/*    height: auto;*/
+/*    position: absolute;*/
+/*    left: 0px;*/
+/*    top: 0px;*/
+/*}*/
 .one_h{
     height: var(--one_head_h);
     line-height: var(--one_head_h);
@@ -62,6 +47,18 @@
     padding: 0px 1.5rem 0px 1.5rem;
     background: var(--three_h_li_bk);
 }
+#pub_body{
+    width: 500vw;
+    height: calc(100% - var(--pub_foot_h));
+    position: absolute;
+    left: 0px;
+    top: 0px;
+}
+.body_sons{
+    /*width:100px !important;*/
+    height: 100%;
+    float: left;
+}
 #pub_foot{
     /*width: 100%;*/
     height: var(--pub_foot_h);
@@ -70,6 +67,7 @@
     position: absolute;
     left: 0px;
     bottom: 0px;
+    z-index: 1;
 }
 #pub_foot ul{
     display: block;
@@ -87,8 +85,8 @@
 }
 #pub_foot li>a>span{
     font-weight: bold;
-}/*4eae316969853819*/
-/*9943eccfd64871a0*//*      平
+}/*tps*/
+/*cyl*//*      平
 分
 父
 */
@@ -120,8 +118,8 @@
 }
 .f_act{
     background: var(--pub_f_act_bk);
-}/*9943eccfd64871a0*/
-/*32dc9d70cb0c0fd2*/#base_shade{
+}/*cyl*/
+/*kvr*/#base_shade{
     background: var(--b_shade_bk);
 }
 .b_shade_cent{
@@ -209,14 +207,23 @@
 .visible{
     visibility: visible !important;
 }
+.show{
+    display: block;
+}
+.hidden{
+    display: none;
+}
 #storage_f{
     display: none;
     visibility: hidden !important;
     width: 0px;
     height: 0px;
     overflow: hidden;
-}/*32dc9d70cb0c0fd2*/
+}/*kvr*/
 
-/*58ce4e684473adc0*/.full_w{
+/*cwj*/.full_w{
     width: 100vw;
-}/*58ce4e684473adc0*/
+}
+.full_h{
+    height: 100vh;
+}/*cwj*/
