--- a/project/chat_forum_more_project/web/static_resource/css/pub/mobile/pub.css
+++ b/project/chat_forum_more_project/web/static_resource/css/pub/mobile/pub.css
@@ -4,7 +4,7 @@
     position: absolute;
     left: 0px;
     top: 0px;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 #dom_f{
     width: 100%;
@@ -12,7 +12,7 @@
     position: absolute;
     left: 0px;
     bottom: 0px;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 /*#pub_head{*/
 /*    width: auto;*/
@@ -55,8 +55,7 @@
     top: 0px;
 }
 .body_sons{
-    /*width:100px !important;*/
-    height: 100%;
+    /*height: 100%;*/
     float: left;
 }
 #pub_foot{
@@ -226,4 +225,7 @@
 }
 .full_h{
     height: 100vh;
+}
+.full_h_for_father{
+    height: 100%;
 }/*cwj*/
