forum 水平移动完成，下一步上下移动，填充dom，请求api

--- a/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
+++ b/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
@@ -24,5 +24,5 @@
     --notice_body_bk: #00f5ff;
     --b_forum_bk: #ff9f0d;
     --pub_head_bk: #0dff00;
-    --forum_head_t_act_bk: #ff1719;
+    --forum_head_c_act_bk: #ff1719;
 }/*hon*/
